# rust-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  MIGRATION_GUIDE.md  README.md
.github/workflows/: ci.yml  deploy.yml
asset/test/: docker_db_check.md
migrations/: run_migration.ps1
migrations/00000000000000_init/: down.sql  up.sql
migrations/2025010200000_create_job_execution_history/: add_comments.sql  down.sql  up.sql
migrations/2026011800000_create_stock_plate/: down.sql  up.sql
migrations/2026062700000_create_he_luo_lookup/: down.sql  up.sql
migrations/2026062710000_seed_luoshu_lookup/: down.sql  up.sql
migrations/2026062711000_seed_hetu_cross/: down.sql  up.sql
src/: app.rs  main.rs  schema.rs
src/api_models/: ai_analysis.rs  bagua.rs  basic_data_analysis.rs  convertible_bond_query.rs  daily_kline.rs  dynamic_backtrack.rs  kline_import.rs  mod.rs  monthly_kline.rs  multi_level_filter.rs  profit_analysis.rs  scheduler.rs  stock.rs  stock_plate.rs  stock_plate_em.rs  stock_plate_stock_table.rs  stock_price_compare.rs  stock_request.rs  stock_request_stock.rs  stock_snapshot.rs  stock_table.rs  stock_track_query.rs  stock_trade_date_query.rs  stock_watchlist.rs  stock_watchlist_query.rs
src/handler/: ai_analysis.rs  bagua.rs  basic_data_analysis.rs  convertible_bond_query.rs  daily_kline.rs  dynamic_backtrack.rs  error.rs  mod.rs  monthly_kline.rs  multi_level_filter.rs  profit_analysis.rs  scheduler.rs  stock.rs  stock_persist.rs  stock_plate.rs  stock_plate_em.rs  stock_plate_stock_table.rs  stock_price_compare.rs  stock_request.rs  stock_request_stock.rs  stock_snapshot.rs  stock_table.rs  stock_track_query.rs  stock_trade_date_query.rs  stock_watchlist.rs  stock_watchlist_query.rs  ws_handler.rs
src/models/: ai_trend_analysis.rs  daily_klines.rs  he_luo_lookup.rs  job_execution_history.rs  mod.rs  profit_analysis.rs  stock.rs  stock_plate_stock_tables.rs  stock_plates.rs  stock_request_stocks.rs  stock_requests.rs  stock_snapshots.rs  stock_tables.rs  stock_watchlist.rs
src/repositories/: ai_trend_analysis.rs  basic_data_analysis.rs  daily_kline.rs  mod.rs  (+15 more)
(+79 files in other folders)
