[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "gzip"] }
urlencoding = "2.1"
anyhow = "1.0"
polars = { version = "0.38", features = ["dtype-categorical", "performant", "lazy"] }
thiserror = "1.0"
hashbrown = { version = "0.14", features = ["raw"] }

[patch.crates-io]
# 修复 CI/Docker 构建中 transitive crate `home` 0.5.12 需要 edition2024（仅 nightly 可用）的问题
# 强制使用 0.5.11（edition 2021），避免 nightly 依赖
home = "=0.5.11"


