[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid", "numeric"] }
r2d2 = "0.8"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "gzip"] }
urlencoding = "2.1"
anyhow = "1.0"
polars = { version = "0.38", default-features = false, features = [
    "lazy",
    "dtype-categorical",
    "performant",
    "temporal",
    "strings",
    "timezones"
] }
thiserror = "1.0"
hashbrown = { version = "0.14", features = ["raw"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.10"
rand = "0.8"
tracing-appender = "0.2"

